feat: add LinkFundSources command to associate fund sources with wallets
