# internal/treasury/adapters/db/dbmodels/wallets.sql.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.27.0
+//   sqlc v1.31.1
 // source: wallets.sql
 
 package dbmodels
@@ -146,4 +146,20 @@ func (q *Queries) ListWallets(ctx context.Context, arg ListWalletsParams) ([]Tre
 		return nil, err
 	}
 	return items, nil
+}
+
+const updateWalletBalance = `-- name: UpdateWalletBalance :exec
+UPDATE treasury.wallets
+SET balance = $1
+WHERE wallet_uuid = $2
+`
+
+type UpdateWalletBalanceParams struct {
+	Balance    decimal.Decimal
+	WalletUuid domain.WalletUUID
+}
+
+func (q *Queries) UpdateWalletBalance(ctx context.Context, arg UpdateWalletBalanceParams) error {
+	_, err := q.db.Exec(ctx, updateWalletBalance, arg.Balance, arg.WalletUuid)
+	return err
 }
